test/fixtures/type-error/scope-failure.ro
fun isComplex(number: i32): boolean =
  match number {
    case x is Real(_) -> false
    case 2 -> false
    else -> false
  }